# nccl_study

./: .gitignore  CMakeLists.txt  README.md  analyze_quant_model.py  build.sh
nccl_chap1/: Demo.md  demo.cpp
nccl_chap1/offical_examples/: README.md  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example_reduce_verify.cpp
